<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView android:src="@mipmap/ic_launcher"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dashboard_activity_button_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:text="@string/string_dashboard_activity_profile_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/dashboard_activity_button_new_surveys"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:text="@string/string_dashboard_activity_new_surveys_button"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_activity_button_old_surveys"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:text="@string/string_dashboard_activity_old_surveys_button"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_activity_button_logout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:padding="12dp"
            android:text="@string/string_dashboard_activity_logout_button"/>

    </LinearLayout>

</LinearLayout>
