<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/screen_1_bg"
    tools:context=".utils.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/photo_ic"
            android:layout_gravity="center|start"
            android:contentDescription="@string/upload_photo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_photo"
            android:textColor="@color/screen_1_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.26"
        android:orientation="vertical"
        android:divider="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/first_name"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/fisrt_name"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/last_name"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/last_name"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/birth_date"
                android:inputType="date"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/birth_date"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.26"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:orientation="vertical"
        android:background="@drawable/list_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/email_address"
                android:inputType="textEmailAddress"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/email_address"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/phone_number"
                android:inputType="phone"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/phone__number"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/professional_activity"
                android:inputType="phone"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/activity_profession"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.26"
        android:orientation="vertical"
        android:divider="@android:color/darker_gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/residence_place"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/place_of_residence"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/toonta_cumilated_points"
                android:inputType="number"
                android:layout_weight="0.9"
                android:background="@android:color/transparent"
                android:hint="@string/cumulated_points"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:orientation="horizontal"
            android:background="@android:color/background_light">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/label_three"
                android:inputType="text"
                android:layout_weight="0.9"
                android:hint="@string/label_three"
                android:background="@android:color/transparent"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@mipmap/crayon"/>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>
